--- a/.github/workflows/project_tracker_workflow.yml
+++ b/.github/workflows/project_tracker_workflow.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install pandas
 
     - name: Run Tests
       run: python -m projecttracker_test_suite
