--- a/.github/workflows/project_tracker_workflow.yml
+++ b/.github/workflows/project_tracker_workflow.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pandas
+        python -m pip install IPython
 
     - name: Run Tests
       run: python -m projecttracker_test_suite
